codeforces/compiling_error.txt
/home/shashank/code/algo/codeforces/499B.cpp: In function ‘int main()’:
/home/shashank/code/algo/codeforces/499B.cpp:24:26: error: no matching function for call to ‘std::basic_string<char>::push_back(std::string&)’
       ans.push_back(first);
                          ^
/home/shashank/code/algo/codeforces/499B.cpp:24:26: note: candidate is:
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bitset:47,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/stdc++.h:65,
                 from /home/shashank/code/algo/codeforces/499B.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:1052:7: note: void std::basic_string<_CharT, _Traits, _Alloc>::push_back(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       push_back(_CharT __c)
       ^
/usr/include/c++/4.8/bits/basic_string.h:1052:7: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘char’
/home/shashank/code/algo/codeforces/499B.cpp:25:59: error: no matching function for call to ‘std::basic_string<char>::push_back(std::string&)’
     else if(first.size()<second.size())ans.push_back(first);
                                                           ^
/home/shashank/code/algo/codeforces/499B.cpp:25:59: note: candidate is:
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bitset:47,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/stdc++.h:65,
                 from /home/shashank/code/algo/codeforces/499B.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:1052:7: note: void std::basic_string<_CharT, _Traits, _Alloc>::push_back(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       push_back(_CharT __c)
       ^
/usr/include/c++/4.8/bits/basic_string.h:1052:7: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘char’
/home/shashank/code/algo/codeforces/499B.cpp:26:30: error: no matching function for call to ‘std::basic_string<char>::push_back(std::string&)’
     else ans.push_back(second);
                              ^
/home/shashank/code/algo/codeforces/499B.cpp:26:30: note: candidate is:
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bitset:47,
                 from /usr/include/x86_64-linux-gnu/c++/4.8/bits/stdc++.h:65,
                 from /home/shashank/code/algo/codeforces/499B.cpp:1:
/usr/include/c++/4.8/bits/basic_string.h:1052:7: note: void std::basic_string<_CharT, _Traits, _Alloc>::push_back(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       push_back(_CharT __c)
       ^
/usr/include/c++/4.8/bits/basic_string.h:1052:7: note:   no known conversion for argument 1 from ‘std::string {aka std::basic_string<char>}’ to ‘char’
